refactor: 기존의 입력값을 리스트로 저장하던 asList() 를 List.of() 로 변경하였습니다
- 복사본으로 저장하는 list.of() 를 통해 기존값의 변경 가능성을 줄여 불변값으로 관리 할 수 있도록 변경하였습니다.